Fix overflow works to scroll

--- a/public/components/notification_center/index.less
+++ b/public/components/notification_center/index.less
@@ -7,6 +7,7 @@ notification-center {
   background-color: #fff;
   border-left: 1px solid #6EADC1;
   box-shadow: 0 5px 22px rgba(0, 0, 0, 0.25);
+  overflow-y: scroll;
   z-index: 100;
 
   .kuiEventBody__message {
